# Epam_weather_project

./: .gitignore  Dockerfile  README.MD  db_creation.sql  db_script.sql  docker-compose.yml  pyproject.toml
app/: Dockerfile  app.py  config.py  db_config.json  db_script.sql  download.py  pyproject.toml  storage.py  views.py
app/configs/: db_config.ini
app/download_instruments/: download.py
app/instr/: db_driver.py  download.py
app/static/css/: index.css
app/templates/: index.html
app/ui/: app.py  views.py
app/ui/configs/: db_config.ini  download.ini
app/ui/instr/: data_formatter.py  db_driver.py  db_updater.py  prepare_data.py  scraper.py  storage.py  weather_storage.py
app/ui/templates/: index.html
app/ui/tests/: test_views.py
data/: cities.json  form_data_rp5.json  form_data_wwo.json  headers_rp5.json  urls_rp5.json  urls_wwo.json
data/csv/Berlin/: 2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv
data/csv/Canberra/: 2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv
data/csv/Irkutsk/: 2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv
data/csv/Kazan/: 2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv
data/csv/Kirov/: 2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv
data/csv/Krasnoyarsk/: 2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  (+2 more)
db/: Dockerfile  init.sql
(+150 files in other folders)
